--- a/src/Timeline.css
+++ b/src/Timeline.css
@@ -1,5 +1,20 @@
 .timeline {
-    width: 500px;
-    height: 300px; 
+    width: 600px;
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+}
+
+.timeline .line {
+    width: 100%;
+    height: 50px;
+    display: flex;
+    flex-direction: row;
+}
+
+.timeline .line .version {
+    width: 50px;
+    height: 50px;
+    border: 1px solid #fff;
     background-color: black;
 }
