--- a/src/Timeline.css
+++ b/src/Timeline.css
@@ -12,9 +12,16 @@
     flex-direction: row;
 }
 
-.timeline .line .version {
+.timeline .line .version-container {
     width: 50px;
     height: 50px;
-    border: 1px solid #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.timeline .line .version-container .version {
+    width: 50px;
     background-color: black;
+    box-sizing: content-box
 }
