--- a/src/index.css
+++ b/src/index.css
@@ -7,9 +7,10 @@ html * {
 body {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   height: 100vh;
   width: 100vw;
+  overflow: hidden;
 }
 
 code {
